# core

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.ci-config/: database.yaml  microservices.yaml  system.yaml
.configs/: database.yaml  database.yml  logging.ini  microservices.yaml
.github/workflows/: ci.yaml  sync-to-A-Team-VPL.yaml
src/core/: __init__.py  abstract.py  bootstrap.py  configurations.py  dependency_injection.py  internal_message_bus.py  message_bus.py  messages.py  models.py  orm.py  unit_of_work.py  views.py
src/core/adapters/: __init__.py  sqlalchemy_adapter.py
src/core/test/: fixtures.py
tests/: __init__.py  conftest.py
tests/double/fake/: __init__.py  handlers.py  models.py  schemas.py
tests/e2e/: conftest.py  test_bootstrap.py  test_bootstrapper.py  test_message_bus.py  test_messagebus.py  test_view.py
tests/integration/sqlalchemy_adapter/: test_component_factory.py  test_repository.py
tests/unit/: conftest.py  test_bootstrapper.py  test_message_bus.py  test_messagebus.py  test_models.py  test_view.py
